--- a/index.html
+++ b/index.html
@@ -15,32 +15,38 @@
     <title>The Who</title>
   </head>
   <body>
+    
 
-   <div class="jumbotron text-center background #000000
-   " style="margin-bottom:0" >
-  <h1>THE WHO</h1>
-  <p>Won't be fooled again</p> 
-</div>
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar <img src="assets/images/brandSMALL.gif "    > </a>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="background-color: #000000;>
+  
+  <!-- Navbar content -->
+</nav>
+  <a class="navbar-brand" href="#">1964 <img src="assets/images/brandSMALL.gif "    > </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Tour dates</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Band Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Music Mp3</a>
+      </li>    
+      <li class="nav-item">
+        <a class="nav-link" href="#">Media Links</a>
       </li>    
     </ul>
   </div>  
 </nav> 
+<div class="jumbotron text-center background #000000
+   " style="margin-bottom:0" >
+  <h1>THE WHO</h1>
+  <p>Won't be fooled again</p> 
+</div>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -66,23 +72,18 @@
   </a>
 </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- <footer class="container-fluid">
+   <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                   The Who are an English rock band formed in London in 1964. Their classic line-up consisted of lead singer Roger Daltrey, guitarist and singer Pete Townshend, bass guitarist John Entwistle and drummer Keith Moon. They are considered one of the most influential rock bands of the 20th century, selling over 100 million records worldwide. 
                 </p>
             </div>
             <div class="col-sm-4">
-                <h5 class="uppercase general-sub">Download</h5>
+                <h5 class="uppercase general-sub">Tour Dates</h5>
                 <p class="inline-block">
-                    Need a printable version of my CV? Download it here.
+                    Need a printable version of Tour Dates.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
@@ -132,25 +133,12 @@
             </div>
         </div>
     </footer>
+     <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ 
 </body>
 </html>
- <footer>
-         <section class="container footer-info">
-            <div class="row">
-               <div class="col-xs-12 col-sm-6">
-                  <a href="contact.html">
-                     <h4 class="uppercase bookus foothover">Book us now!</h4>
-                  </a>
-               </div>
-               <div class="col-xs-12 col-sm-6">
-                  <ul class="list-inline">
-                     <li><a target="_blank" href="https://twitter.com/the1975?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter foothover"></i></a></li>
-                     <li><a target="_blank" href="https://www.instagram.com/the1975/?hl=en"><i class="fa fa-instagram foothover"></i></a></li>
-                     <li><a target="_blank" href="https://www.youtube.com/channel/UC_LfW1R3B0of9qOw1uI-QNQ"><i class="fa fa-youtube foothover"></i></a></li>
-                     <li><a target="_blank" href="https://www.facebook.com/the1975/"><i class="fa fa-facebook foothover"></i></a></li>
-                  </ul>
-               </div>
-            </div>
-         </section>
-      </footer> </body>
-</html>
+
