changes made old workspace

--- a/Bandinfo.html
+++ b/Bandinfo.html
@@ -51,39 +51,39 @@
 
 <div class="container text-center">
   <h3>ORIGINAL LINE UP</h3>
-  <p><em>Keith Moon We <ISS YOU</em></p>
+  <p><em>Keith Moon WE MISS YOU</em></p>
   <p>ROGER DALTRY and PETER TOWNSEND still touring</p>
   <br>
+  
+  
+<div class="container">
   <div class="row">
-    <div class="col-sm-4">
-      <p><strong>Roger Daltry</strong></p><br>
+    <div class="col-sm .col-xs-6 .col-md-4">
+    <p><strong>Roger Daltry</strong></p><br>
       <img src="assets/bandimages/roger.jpg" alt="Roder Daltry image" width="255" height="255">
-    </div>
-    <div class="col-sm-4">
-      <p><strong>Mega Band</strong></p><br>
-      <img src="assets/bandimages/thewho.jpg"class="img-circle person"  alt="Mega band image" width="255" height="255">
-    </div>
-    <div class="col-sm-4">
-      <p><strong>Pete Townshend</strong></p><br>
-      <img src="assets/bandimages/townshend.jpg" alt="Pete Townshend image" width="255" height="255">
+      </div>
+    <div class="col-sm">
+       <p><strong>Mega Band</strong></p><br>
+      <img src="assets/bandimages/band.png"  alt="Mega band image" width="255" height="255"></div>
+    <div class="col-sm">
+    <p><strong>Pete Townshend</strong></p><br>
+      <img src="assets/bandimages/petet.png" alt="Pete Townshend image" width="255" height="255">
+   
     </div>
   </div>
 </div>
 
 
 
-
-
-
 <div class="container text-center">
   <h3>2019 LINE UP</h3>
-  <p><em>Keith Moon We <ISS YOU</em></p>
+  <p><em>Keith Moon WE MISS YOU</em></p>
   <p>ROGER DALTRY and PETER TOWNSEND still touring</p>
   <br>
   <div class="row">
     <div class="col-sm-4">
       <p><strong>Roger Daltry</strong></p><br>
-      <img src="assets/bandimages/rog.jpg" alt="Roger Daltry" width="255" height="255">
+      <img src="assets/bandimages/dippy.png" alt="Roger Daltry" width="255" height="255">
     </div>
     <div class="col-sm-4">
       <p><strong>Mega Band</strong></p><br>
@@ -91,7 +91,7 @@
     </div>
     <div class="col-sm-4">
       <p><strong>Pete Townshend</strong></p><br>
-      <img src="assets/bandimages/pete.jpg" alt="Pete Townshend" width="255" height="255">
+      <img src="assets/bandimages/petet.png" alt="Pete Townshend" width="255" height="255">
     </div>
   </div>
 </div>
